<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/application_background"
    android:orientation="vertical">

    <!-- Your SNI -->
    <LinearLayout
        android:id="@+id/sni_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_settings_back_white10_20"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingBottom="0dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/current_sni_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/sni_image_view"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:src="@drawable/ic_baseline_your_servers_24" />

            <TextView
                android:id="@+id/SNI_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/sni_image_view"
                android:text="@string/your_current_sni"
                android:textColor="@color/white"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/SNI_text_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:layout_toStartOf="@+id/imageView"
                android:layout_toEndOf="@id/SNI_label"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/default_sni"
                android:textColor="@color/white"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_outline_arrow_forward_ios_16"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/sni_text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="8dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/sni_text_description"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <!-- Auto SNI -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="0dp"
            android:paddingStart="14dp"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/sql_server_icon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:paddingStart="0dp"
                android:paddingEnd="8dp"
                android:src="@drawable/ic_sql_server_24" />

            <TextView
                android:id="@+id/loaded_sni_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/sql_server_icon"
                android:text="@string/loaded_sni_label"
                android:textColor="@color/white"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/loaded_sni_count_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="24dp"
                android:text="456"
                android:textColor="@color/white"
                android:textStyle="normal" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/load_sni_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/load_sni_from_file" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/delete_sni_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete_loaded_sni" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/auto_select_sni_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/auto_select_sni" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>